[gd_scene load_steps=3 format=2]

[ext_resource path="res://Objects/Game_modes/SURVIVAL_mode.gd" type="Script" id=1]
[ext_resource path="res://font.tres" type="DynamicFont" id=2]

[node name="SURVIVAL_mode" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="msg" type="PanelContainer" parent="."]
margin_left = 436.044
margin_top = 582.244
margin_right = 955.044
margin_bottom = 699.244
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="msg"]
margin_left = 7.0
margin_top = 7.0
margin_right = 512.0
margin_bottom = 110.0

[node name="msgText" type="TextEdit" parent="msg/Panel"]
margin_left = 18.0
margin_top = 15.0
margin_right = 491.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 2 )
text = "Get ready Zombies will be spawning soon"
readonly = true

[node name="timer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -90.5
margin_right = 90.5
margin_bottom = 67.0
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="timer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 174.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="timer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.4558
margin_top = -19.1599
margin_right = 25.5442
margin_bottom = 4.84014
rect_scale = Vector2( 1.75, 1.75 )
custom_fonts/font = ExtResource( 2 )
text = "0:00"

[node name="update2" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="zm_spawn_dl" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="chk_zm_count" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
[connection signal="timeout" from="update2" to="." method="_on_update2_timeout"]
[connection signal="timeout" from="zm_spawn_dl" to="." method="_on_zm_spawn_dl_timeout"]
[connection signal="timeout" from="chk_zm_count" to="." method="_on_chk_zm_count_timeout"]
